--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -17,7 +17,7 @@
     "import json\n",
     "import scipy\n",
     "import seaborn as sns\n",
-    "from playground.utils import cb_df, get_simulation\n",
+    "from playground.utils import cb_df, ccb_df, get_simulation\n",
     "from playground.dashboard import Dashboard\n",
     "from playground.vw_playground import VwPlayground\n",
     "\n",
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulator"
+    "# Visualizers (generic)"
    ]
   },
   {
@@ -42,7 +42,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def my_simulation(n=10000, swap_after=5000, variance=0, bad_features=0):\n",
+    "def plot_reward(examples, job, ax=None, window=100):\n",
+    "\n",
+    "    ax = ax or new_ax()\n",
+    "    ax.set_title('Average reward')\n",
+    "    df = job.loss_table.rolling(window=window).mean()\n",
+    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['since_last'], label='Reward', ci=None, sort=False, estimator=None)\n",
+    "    p.set_ylabel(\"reward\")\n",
+    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# CB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_cb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0):\n",
     "    offset = 0\n",
     "    for i in range(1, n):\n",
     "        if i % swap_after == 0:\n",
@@ -77,7 +109,7 @@
     "tags": []
    },
    "source": [
-    "# Visualizers"
+    "## Visualizers"
    ]
   },
   {
@@ -114,16 +146,7 @@
     "                         label=f'P(chosen={j} | Person={i})',color = colors[j], linestyle = styles[i], ax=ax,\n",
     "                         ci=None, sort=False, estimator=None)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
-    "     \n",
-    "        \n",
-    "def plot_reward(examples, job, ax=None, window=100):\n",
-    "\n",
-    "    ax = ax or new_ax()\n",
-    "    ax.set_title('Average reward')\n",
-    "    df = job.loss_table\n",
-    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', ci=None, sort=False, estimator=None)\n",
-    "    p.set_ylabel(\"reward\")\n",
-    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
+    "     "
    ]
   },
   {
@@ -132,7 +155,7 @@
     "tags": []
    },
    "source": [
-    "# Look at the data / Debug"
+    "## Look at the data / Debug"
    ]
   },
   {
@@ -141,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "examples = my_simulation(n=100, swap_after=50, variance = 0.1, bad_features = 1)\n",
+    "examples = my_cb_simulation(n=100, swap_after=50, variance = 0.1, bad_features = 1)\n",
     "cb_df(examples).head()"
    ]
   },
@@ -151,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "next(my_simulation(n=10000, swap_after=5000, variance = 0, bad_features = 1))"
+    "next(my_cb_simulation(n=10000, swap_after=5000, variance = 0, bad_features = 1))"
    ]
   },
   {
@@ -162,7 +185,7 @@
    "source": [
     "visualization = Dashboard(['-p'], [[plot_env, plot_probs]])\n",
     "visualization.reset()\n",
-    "examples, examples_path = get_simulation('.data', my_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
+    "examples, examples_path = get_simulation('.data', my_cb_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
     "visualization.after_simulation(examples)\n",
     "job = Vw('.cache', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
     "visualization.after_train(examples, job)"
@@ -174,7 +197,7 @@
     "tags": []
    },
    "source": [
-    "# Interact"
+    "## Interact"
    ]
   },
   {
@@ -189,7 +212,7 @@
     "\n",
     "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
     "\n",
-    "playground = VwPlayground(my_simulation, dashboard)\n",
+    "playground = VwPlayground(my_cb_simulation, dashboard)\n",
     "\n",
     "playground.run(\n",
     "    simulator_grid = {\n",
@@ -230,19 +253,165 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CCB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Simulator"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "import numpy as np\n",
+    "\n",
+    "def my_ccb_simulation(n=10000, variance=0, bad_features=0, seed=0):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
+    "\n",
+    "    env = [\n",
+    "        [0.8, 0.4, 0.2],\n",
+    "        [0.8, 0.4, 0.2]]\n",
+    "    for i in range(1, n):\n",
+    "        person = random.randint(0, 1)\n",
+    "        chosen = [int(i) for i in np.random.permutation(3)]\n",
+    "        rewards = [\n",
+    "            env[person][chosen[0]],\n",
+    "            env[person][chosen[1]]\n",
+    "            ]\n",
+    "\n",
+    "        for i in range(len(rewards)):\n",
+    "            rewards[i] += np.random.normal(0, variance)\n",
+    "\n",
+    "        yield {\n",
+    "            \"c\": {\n",
+    "                'shared': {'f': str(person)},\n",
+    "                '_multi': [{'a': {'f': str(i)}, 'b': {f'f{j}': random.random() for j in range(int(bad_features))}} for i in range(3)],\n",
+    "                '_slots': [{'_id': i} for i in range(2)]\n",
+    "            },\n",
+    "            '_outcomes': [{\n",
+    "                '_label_cost': -rewards[i],\n",
+    "                '_a': chosen[i:],\n",
+    "                '_p': [1.0 / (3 - i)] * (3 - i)\n",
+    "            } for i in range(2)]\n",
+    "        }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Look at the data / Debug"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "examples = my_ccb_simulation(n=100, variance = 0.1, bad_features = 1, seed = 0)\n",
+    "ccb_df(examples).head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(my_ccb_simulation(n=10000, variance = 0, bad_features = 1, seed = 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visualization = Dashboard([], [[plot_reward]])\n",
+    "visualization.reset()\n",
+    "examples, examples_path = get_simulation('.data', my_ccb_simulation, n = 10000, variance = 0, bad_features = 1, seed = 0)\n",
+    "visualization.after_simulation(examples)\n",
+    "job = Vw('.cache', handlers=[]).train(examples_path, '--ccb_explore_adf --dsjson', ['-p'])\n",
+    "visualization.after_train(examples, job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interact"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "layout = [\n",
+    "    [lambda examples, job, ax: plot_reward(examples, job, ax, 10)]]\n",
+    "\n",
+    "dashboard = Dashboard([], layout, figsize=(12,8))\n",
+    "\n",
+    "playground = VwPlayground(my_ccb_simulation, dashboard)\n",
+    "\n",
+    "playground.run(\n",
+    "    simulator_grid = {\n",
+    "        'n': IntSlider(value=10000, min=100, max=50000),\n",
+    "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
+    "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100)\n",
+    "    },\n",
+    "    vw_grid = {\n",
+    "        '#base': fixed('--ccb_explore_adf --dsjson --power_t 0 -P 100'),\n",
+    "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
+    "        '--cb_type': ['ips', 'mtr'],\n",
+    "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
+    "        '#noconstant': ['', '--noconstant'],\n",
+    "        '#config': ['', '-q ::', '--automl 4 --automl_alpha 0.01 --global_lease 4000 --oracle_type one_diff --priority_challengers 1'],\n",
+    "    },\n",
+    "    columns=3\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Last command line')\n",
+    "print(playground.last_job[0].args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "playground.last_job[0].stdout.raw"
+   ]
   }
  ],
  "metadata": {
   "interpreter": {
-   "hash": "b8f4a58adc17b056f67bda23a8d2f1daa157665278cb2abc3190e1c7319c7b72"
+   "hash": "a9d13462683d0a0a4577d32cb0c80597d2d736f52010de23db877ba50e997557"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
