--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from vw_executor.vw import Vw\n",
     "\n",
-    "vw = Vw('.vw_cache')"
+    "vw = Vw('.vw_cache', handler=None)"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "source": [
     "# Options that you probably need for training\n",
     "--preserve_performance_counters - make all counters preserved between different files <br/>\n",
-    "--save_resume - model that is saved as output after each file processing, has all information required for further learning (not just regressor weights) </br>\n",
+    "--save_resume - model that is saved as output after each file processing, has all information required for further learning (not just regressor weights) <br/>\n",
     "-P $some_number    - make progressive loss report every $some_number examples"
    ]
   },
@@ -312,18 +312,21 @@
     "from vw_executor.handlers import ArtifactCopy\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
-    "    handlers = [ArtifactCopy('artifacts', outputs=['-p'])])\n",
-    "\n",
+    "    handler = ArtifactCopy('artifacts', outputs=['-p']))\n",
     "vw.train(inputs, ['--cb_explore_adf --dsjson --epsilon 0.2', '--cb_explore_adf --dsjson --epsilon 0.3'], ['-p'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "e6d91e144c1e8b75ccdd4259c6213e15c7f5d1d664ef01abea10605a34f365c2"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -337,11 +340,16 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.5"
   },
   "metadata": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a9d13462683d0a0a4577d32cb0c80597d2d736f52010de23db877ba50e997557"
    }
   }
  },
