--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -187,7 +187,7 @@
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_cb_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
     "visualization.after_simulation(examples)\n",
-    "job = Vw('.cache', handlers=[]).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
+    "job = Vw('.cache', handler=None).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
     "visualization.after_train(examples, job)"
    ]
   },
@@ -425,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
