--- a/from_mwt_ds/DataScience/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/vw_playground.ipynb
@@ -222,7 +222,7 @@
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "    },\n",
     "    vw_grid = {\n",
-    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 1000'),\n",
+    "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
     "        '--learning_rate': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
@@ -343,7 +343,7 @@
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_ccb_simulation, n = 10000, variance = 0, bad_features = 1, seed = 0)\n",
     "visualization.after_simulation(examples)\n",
-    "job = Vw('.cache', handlers=[]).train(examples_path, '--ccb_explore_adf --dsjson', ['-p'])\n",
+    "job = Vw('.cache', handler=None).train(examples_path, '--ccb_explore_adf --dsjson', ['-p'])\n",
     "visualization.after_train(examples, job)"
    ]
   },
