default handler in getting started

--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "from vw_executor.vw import Vw\n",
     "\n",
-    "vw = Vw('.vw_cache', handler=None)"
+    "vw = Vw('.vw_cache')"
    ]
   },
   {
