--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -246,7 +246,7 @@
     "from vw_executor.loggers import ConsoleLogger\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
-    "    loggers = [ConsoleLogger('DEBUG')])\n",
+    "    logger = ConsoleLogger('DEBUG'))\n",
     "\n",
     "vw.train(inputs, '--cb_explore_adf --dsjson')"
    ]
@@ -268,7 +268,7 @@
     "from vw_executor.loggers import FileLogger\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
-    "    loggers = [FileLogger('log.txt', 'DEBUG')])\n",
+    "    logger = FileLogger('log.txt', 'DEBUG'))\n",
     "\n",
     "vw.train(inputs, '--cb_explore_adf --dsjson')"
    ]
@@ -290,7 +290,7 @@
     "from vw_executor.loggers import MultiFileLogger\n",
     "\n",
     "vw = Vw('.vw_cache',\n",
-    "    loggers = [MultiFileLogger('artifacts', 'DEBUG')])\n",
+    "    logger = MultiFileLogger('artifacts', 'DEBUG'))\n",
     "\n",
     "vw.train(inputs, ['--cb_explore_adf --dsjson --epsilon 0.2', '--cb_explore_adf --dsjson --epsilon 0.3'])"
    ]
@@ -313,15 +313,9 @@
     "\n",
     "vw = Vw('.vw_cache',\n",
     "    handler = ArtifactCopy('artifacts', outputs=['-p']))\n",
+    "\n",
     "vw.train(inputs, ['--cb_explore_adf --dsjson --epsilon 0.2', '--cb_explore_adf --dsjson --epsilon 0.3'], ['-p'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
