--- a/from_mwt_ds/DataScience/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/getting_started.ipynb
@@ -62,7 +62,7 @@
     "# Options that you probably need for training\n",
     "--preserve_performance_counters - make all counters preserved between different files <br/>\n",
     "--save_resume - model that is saved as output after each file processing, has all information required for further learning (not just regressor weights) <br/>\n",
-    "-P $some_number    - make progressive loss report every $some_number examples"
+    "-P some_number    - make progressive loss report every some_number examples"
    ]
   },
   {
