--- a/from_mwt_ds/DataScience/notebooks/getting_started.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/getting_started.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -32,8 +41,8 @@
    "outputs": [],
    "source": [
     "inputs = [\n",
-    "    'vw_executor/tests/data/cb_1000_0.json',\n",
-    "    'vw_executor/tests/data/cb_1000_1.json', \n",
+    "    '../vw_executor/tests/data/cb_1000_0.json',\n",
+    "    '../vw_executor/tests/data/cb_1000_1.json', \n",
     "    ]\n",
     "inputs"
    ]
@@ -320,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit (windows store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -334,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   },
   "metadata": {
    "interpreter": {
