datagen -> noteboooks/datagen

--- a/from_mwt_ds/DataScience/notebooks/datagen.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/datagen.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -78,14 +87,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_file(generate_cb, 10, 'vw_executor/tests/data/cb_0.json')\n",
-    "generate_file(generate_cb, 11, 'vw_executor/tests/data/cb_1.json')\n",
-    "generate_file_with_invalid(10, 'vw_executor/tests/data/cb_invalid.json')\n",
+    "generate_file(generate_cb, 10, '../vw_executor/tests/data/cb_0.json')\n",
+    "generate_file(generate_cb, 11, '../vw_executor/tests/data/cb_1.json')\n",
+    "generate_file_with_invalid(10, '../vw_executor/tests/data/cb_invalid.json')\n",
     "\n",
     "biases = np.random.rand(4,4)\n",
     "print(biases)\n",
-    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, 'vw_executor/tests/data/cb_10000_0.json')\n",
-    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, 'vw_executor/tests/data/cb_10000_1.json')"
+    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, '../vw_executor/tests/data/cb_10000_0.json')\n",
+    "generate_file(lambda i: generate_cb_rnd(i, biases), 10000, '../vw_executor/tests/data/cb_10000_1.json')"
    ]
   },
   {
@@ -94,8 +103,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_file(generate_ccb, 10, 'vw_executor/tests/data/ccb_0.json')\n",
-    "generate_file(generate_ccb, 11, 'vw_executor/tests/data/ccb_1.json')"
+    "generate_file(generate_ccb, 10, '../vw_executor/tests/data/ccb_0.json')\n",
+    "generate_file(generate_ccb, 11, '../vw_executor/tests/data/ccb_1.json')"
    ]
   },
   {
@@ -228,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
