vw_playground -> notebooks/vw_playground

--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -6,6 +6,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%pip install -r requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ipywidgets import *\n",
     "from vw_executor.vw_opts import VwOpts\n",
     "from vw_executor.vw import Vw\n",
@@ -42,12 +51,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_reward(examples, job, ax=None, window=100):\n",
-    "\n",
+    "def plot_reward(examples, job, ax=None, window=10):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Average reward')\n",
     "    df = job.loss_table.rolling(window=window).mean()\n",
-    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['since_last'], label='Reward', ci=None, sort=False, estimator=None)\n",
+    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', ci=None, sort=False, estimator=None)\n",
     "    p.set_ylabel(\"reward\")\n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
    ]
@@ -187,7 +195,7 @@
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_cb_simulation, n = 10000, swap_after = 5000, variance = 0, bad_features = 1)\n",
     "visualization.after_simulation(examples)\n",
-    "job = Vw('.cache', handler=None).train(examples_path, '--cb_explore_adf --dsjson', ['-p'])\n",
+    "job = Vw('.cache', handler=None).train(examples_path, '--cb_explore_adf --dsjson -P 500', ['-p'])\n",
     "visualization.after_train(examples, job)"
    ]
   },
@@ -425,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
