--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -82,6 +82,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "people = ['Tom', 'Anna']\n",
+    "topics = ['sports', 'politics']\n",
+    "\n",
     "def my_cb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0):\n",
     "    offset = 0\n",
     "    for i in range(1, n):\n",
@@ -103,10 +106,10 @@
     "            \"_label_Action\": chosen + 1,\n",
     "            \"_labelIndex\": chosen,\n",
     "            \"a\": [chosen + 1, (chosen + 1) % 2 + 1],\n",
-    "            \"c\": {'shared': {'f': str(person),\n",
+    "            \"c\": {'shared': {'name': people[person],\n",
     "                '_multi': [\n",
-    "                    {'a': {'f': '0'}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}},\n",
-    "                    {'a': {'f': '1'}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}}]}},\n",
+    "                    {'a': {'topic': topics[0]}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}},\n",
+    "                    {'a': {'topic': topics[1]}, 'b': {f'f{i}': random.random() for i in range(int(bad_features))}}]}},\n",
     "            \"p\": [0.5, 0.5] \n",
     "        }"
    ]
@@ -132,11 +135,11 @@
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    df = cb_df(examples)\n",
-    "    for i in [0,1]:\n",
-    "        for j in [0,1]:\n",
-    "            d = df[['reward']][(df['shared_good']==str(i)) & (df['chosen']==j)].rolling(window=window).mean()\n",
+    "    for i, p in enumerate(people):\n",
+    "        for j, t in enumerate(topics):\n",
+    "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'],\n",
-    "                         label=f'Person: {i}, chosen: {j}', color = colors[j], linestyle = styles[i], ax=ax,\n",
+    "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
     "                         ci=None, sort=False, estimator=None)       \n",
     "    ax.legend()\n",
     "\n",
@@ -144,16 +147,17 @@
     "def plot_probs(examples, job, ax=None, window=100):\n",
     "    ax = ax or new_ax()\n",
     "    ax.set_title('P(action|person)')\n",
+    "    ax.set_ylim(-0.05,1.05)\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
     "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
-    "    for i in [0,1]:\n",
-    "        for j in [0,1]:\n",
-    "            d = df[(df['shared_good']==str(i))][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
+    "    for i, p in enumerate(people):\n",
+    "        for j, t in enumerate(topics):\n",
+    "            d = df[(df['person']==p)][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)],\n",
-    "                         label=f'P(chosen={j} | Person={i})',color = colors[j], linestyle = styles[i], ax=ax,\n",
+    "                         label=f'P({t}|{p})',color = colors[j], linestyle = styles[i], ax=ax,\n",
     "                         ci=None, sort=False, estimator=None)            \n",
-    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
+    "    ax.legend(loc='center left', bbox_to_anchor=(0.9, 0.5)) \n",
     "     "
    ]
   },
@@ -415,11 +419,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "a9d13462683d0a0a4577d32cb0c80597d2d736f52010de23db877ba50e997557"
-  },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.8.5 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -433,7 +434,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.8.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8d1aeed6f90f1678b662623cba9451a641c249d86279ca75b8832b6f71f1bb11"
+   }
   }
  },
  "nbformat": 4,
