--- a/from_mwt_ds/DataScience/notebooks/explorations.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/explorations.ipynb
@@ -111,7 +111,7 @@
     "    df = cb_df(examples)\n",
     "    for i, p in enumerate(people):\n",
     "        for j, t in enumerate(topics):\n",
-    "            d = df[['reward']][(df['shared_good']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
+    "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'],\n",
     "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
     "                         ci=None, sort=False, estimator=None)       \n",
@@ -127,7 +127,7 @@
     "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
     "    for i, p in enumerate(people):\n",
     "        for j, t in enumerate(topics):\n",
-    "            d = df[(df['shared_good']==p)][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
+    "            d = df[(df['person']==p)][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)],\n",
     "                         label=f'P({t}|{p})',color = colors[j], linestyle = styles[i], ax=ax,\n",
     "                         ci=None, sort=False, estimator=None)            \n",
@@ -465,7 +465,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -479,15 +479,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8d1aeed6f90f1678b662623cba9451a641c249d86279ca75b8832b6f71f1bb11"
+    "hash": "25a19fbe0a9132dfb9279d48d161753c6352f8f9478c2e74383d340069b907c3"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
