more interesting ccb simulator

--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -57,6 +57,7 @@
     "    df = job.loss_table.rolling(window=window).mean()\n",
     "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', ci=None, sort=False, estimator=None)\n",
     "    p.set_ylabel(\"reward\")\n",
+    "    p.set(ylim=(0, 1))\n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
    ]
   },
@@ -287,19 +288,24 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "def my_ccb_simulation(n=10000, variance=0, bad_features=0, seed=0):\n",
+    "def my_ccb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0, seed=0):\n",
     "    random.seed(seed)\n",
     "    np.random.seed(seed)\n",
     "\n",
-    "    env = [\n",
-    "        [0.8, 0.4, 0.2],\n",
-    "        [0.8, 0.4, 0.2]]\n",
+    "    envs = [\n",
+    "        [[0.8, 0.4, 0.2],\n",
+    "        [0.2, 0.4, 0.8]],\n",
+    "        [[0.2, 0.4, 0.8],\n",
+    "        [0.8, 0.2, 0.4]]]\n",
+    "    offset = 0\n",
     "    for i in range(1, n):\n",
+    "        if i % swap_after == 0:\n",
+    "            offset = (offset + 1) % 2\n",
     "        person = random.randint(0, 1)\n",
     "        chosen = [int(i) for i in np.random.permutation(3)]\n",
     "        rewards = [\n",
-    "            env[person][chosen[0]],\n",
-    "            env[person][chosen[1]]\n",
+    "            envs[offset][person][chosen[0]],\n",
+    "            envs[offset][person][chosen[1]]\n",
     "            ]\n",
     "\n",
     "        for i in range(len(rewards)):\n",
@@ -382,6 +388,7 @@
     "playground.run(\n",
     "    simulator_grid = {\n",
     "        'n': IntSlider(value=10000, min=100, max=50000),\n",
+    "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
     "        'seed': IntSlider(value=0, min=0, max=100)\n",
@@ -392,7 +399,7 @@
     "        '--cb_type': ['ips', 'mtr'],\n",
     "        '--l1': FloatLogSlider(value=2**(-20), min=-20, max=10, base=2, step=1),\n",
     "        '#noconstant': ['', '--noconstant'],\n",
-    "        '#config': ['', '-q ::', '--automl 4 --automl_alpha 0.01 --global_lease 4000 --oracle_type one_diff --priority_challengers 1'],\n",
+    "        '#config': ['', '-q sa', '-q ::', '--automl 4 --automl_alpha 0.01 --global_lease 4000 --oracle_type one_diff --priority_challengers 1'],\n",
     "    },\n",
     "    columns=3\n",
     ")"
@@ -420,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.5 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -434,7 +441,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
