--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -288,6 +288,9 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
+    "people_ccb = ['Tom', 'Anna']\n",
+    "topics_ccb = ['sports', 'politics', 'music']\n",
+    "\n",
     "def my_ccb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0, seed=0):\n",
     "    random.seed(seed)\n",
     "    np.random.seed(seed)\n",
@@ -313,8 +316,8 @@
     "\n",
     "        yield {\n",
     "            \"c\": {\n",
-    "                'shared': {'f': str(person)},\n",
-    "                '_multi': [{'a': {'f': str(i)}, 'b': {f'f{j}': random.random() for j in range(int(bad_features))}} for i in range(3)],\n",
+    "                'shared': {'name': people_ccb[person]},\n",
+    "                '_multi': [{'a': {'topic': topics_ccb[i]}, 'b': {f'f{j}': random.random() for j in range(int(bad_features))}} for i in range(3)],\n",
     "                '_slots': [{'_id': i} for i in range(2)]\n",
     "            },\n",
     "            '_outcomes': [{\n",
@@ -323,6 +326,35 @@
     "                '_p': [1.0 / (3 - i)] * (3 - i)\n",
     "            } for i in range(2)]\n",
     "        }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualizers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_env_ccb(examples, ax=None, window=100):\n",
+    "    ax = ax or new_ax()\n",
+    "    ax.set_title('Rewards')\n",
+    "    colors = ['green', 'red', 'blue']\n",
+    "    styles = ['solid', 'dashed']\n",
+    "    df = ccb_df(examples)\n",
+    "    df = df[df['slot']==0]\n",
+    "    for i, p in enumerate(people_ccb):\n",
+    "        for j, t in enumerate(topics_ccb):\n",
+    "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
+    "            sns.lineplot(x = d.index, y=d['reward'],\n",
+    "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
+    "                         ci=None, sort=False, estimator=None)       \n",
+    "    ax.legend()"
    ]
   },
   {
@@ -357,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "visualization = Dashboard([], [[plot_reward]])\n",
+    "visualization = Dashboard([], [[plot_env_ccb, plot_reward]])\n",
     "visualization.reset()\n",
     "examples, examples_path = get_simulation('.data', my_ccb_simulation, n = 10000, variance = 0, bad_features = 1, seed = 0)\n",
     "visualization.after_simulation(examples)\n",
@@ -379,9 +411,9 @@
    "outputs": [],
    "source": [
     "layout = [\n",
-    "    [lambda examples, job, ax: plot_reward(examples, job, ax, 10)]]\n",
+    "    [plot_env_ccb, lambda examples, job, ax: plot_reward(examples, job, ax, 10)]]\n",
     "\n",
-    "dashboard = Dashboard([], layout, figsize=(12,8))\n",
+    "dashboard = Dashboard([], layout, figsize=(12,4))\n",
     "\n",
     "playground = VwPlayground(my_ccb_simulation, dashboard)\n",
     "\n",
