random seed + delta

--- a/from_mwt_ds/DataScience/notebooks/explorations.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/explorations.ipynb
@@ -31,7 +31,7 @@
     "import random\n",
     "import pandas as pd\n",
     "import json\n",
-    "import scipy\n",
+    "import numpy as np\n",
     "import seaborn as sns\n",
     "from playground.utils import get_simulation, cb_df\n",
     "from playground.dashboard import Dashboard\n",
@@ -61,7 +61,9 @@
     "people = ['Tom', 'Anna']\n",
     "topics = ['sports', 'politics']\n",
     "\n",
-    "def my_cb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0):\n",
+    "def my_cb_simulation(n=10000, swap_after=5000, variance=0, bad_features=0, delta=0.8, seed=0):\n",
+    "    random.seed(seed)\n",
+    "    np.random.seed(seed)\n",
     "    offset = 0\n",
     "    for i in range(1, n):\n",
     "        if i % swap_after == 0:\n",
@@ -70,11 +72,11 @@
     "        person = i % 2 \n",
     "        chosen = i % 4  // 2 \n",
     "        if (chosen + person + offset) % 2 == 0:\n",
-    "            reward =  0.7 + ((chosen + offset) % 2) * 0.1\n",
+    "            reward =  0.1 + delta + ((chosen + offset) % 2) * 0.1\n",
     "        else:\n",
-    "            reward = 0.3 - ((chosen + offset + 1) % 2) * 0.1\n",
+    "            reward = 0.1 - ((chosen + offset + 1) % 2) * 0.1\n",
     "\n",
-    "        reward = reward + scipy.random.normal(0, variance)\n",
+    "        reward = reward + np.random.normal(0, variance)\n",
     "\n",
     "        yield {\n",
     "            \"_label_cost\": -reward,\n",
@@ -161,6 +163,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=1, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
@@ -207,6 +211,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
@@ -246,6 +252,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
@@ -286,6 +294,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100'),\n",
@@ -327,6 +337,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --synthcover'),\n",
@@ -368,6 +380,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --squarecb'),\n",
@@ -408,6 +422,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --regcb'),\n",
@@ -447,6 +463,8 @@
     "        'swap_after': IntSlider(value=5000, min=10, max=50000),\n",
     "        'variance': FloatSlider(value=0.4, min=0, max=1, step=0.1),\n",
     "        'bad_features': FloatLogSlider(value=4, min=0, max=10, base=2, step=1),\n",
+    "        'delta': FloatSlider(value=0.8, min=0, max=30),\n",
+    "        'seed': IntSlider(value=0, min=0, max=100),\n",
     "    },\n",
     "    vw_grid = {\n",
     "        '#base': fixed('--cb_explore_adf --dsjson --power_t 0 -P 100 --softmax'),\n",
@@ -465,7 +483,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -479,7 +497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
