job metrics tracker

--- a/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
+++ b/from_mwt_ds/DataScience/notebooks/vw_playground.ipynb
@@ -25,6 +25,7 @@
     "import pandas as pd\n",
     "import json\n",
     "import scipy\n",
+    "import numpy as np\n",
     "import seaborn as sns\n",
     "from playground.utils import cb_df, ccb_df, get_simulation\n",
     "from playground.dashboard import Dashboard\n",
@@ -55,10 +56,23 @@
     "    ax = ax or new_ax()\n",
     "    ax.set_title('Average reward')\n",
     "    df = job.loss_table.rolling(window=window).mean()\n",
-    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', ci=None, sort=False, estimator=None)\n",
+    "    p = sns.lineplot(x = df.reset_index('file').index, y= -df['loss'], label='Reward', errorbar=None, sort=False, estimator=None, ax=ax)\n",
     "    p.set_ylabel(\"reward\")\n",
     "    p.set(ylim=(0, 1))\n",
-    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
+    "    ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))\n",
+    "\n",
+    "class TrackIt:\n",
+    "    def __init__(self, extractor, title):\n",
+    "        self._values = []\n",
+    "        self._title = title\n",
+    "        self._extractor = extractor\n",
+    "\n",
+    "    def __call__(self, examples, job, ax=None, window=10):\n",
+    "        self._values.append(self._extractor(job))\n",
+    "        ax.set_title(self._title)\n",
+    "        p = sns.lineplot(x = range(len(self._values)), y= self._values, label=self._title, errorbar=None, sort=False, estimator=None, ax=ax)\n",
+    "        p.set_ylabel(self._title)\n",
+    "        ax.legend(loc='center left', bbox_to_anchor=(0.75, 0.5))"
    ]
   },
   {
@@ -99,7 +113,7 @@
     "        else:\n",
     "            reward = 0.3 - ((chosen + offset + 1) % 2) * 0.1\n",
     "\n",
-    "        reward = reward + scipy.random.normal(0, variance)\n",
+    "        reward = reward + np.random.normal(0, variance)\n",
     "\n",
     "        yield {\n",
     "            \"_label_cost\": -reward,\n",
@@ -141,7 +155,7 @@
     "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'],\n",
     "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
-    "                         ci=None, sort=False, estimator=None)       \n",
+    "                         errorbar=None, sort=False, estimator=None)       \n",
     "    ax.legend()\n",
     "\n",
     "    \n",
@@ -151,13 +165,13 @@
     "    ax.set_ylim(-0.05,1.05)\n",
     "    colors = ['green', 'red']\n",
     "    styles = ['-', '-.']\n",
-    "    df = pd.concat([cb_df(examples), job[0].predictions('-p').cb], axis=1)\n",
+    "    df = pd.concat([cb_df(examples), pd.DataFrame(job[0].predictions('-p').cb)], axis=1)\n",
     "    for i, p in enumerate(people):\n",
     "        for j, t in enumerate(topics):\n",
     "            d = df[(df['person']==p)][[str(j)]].rolling(window=window).mean() + i * 0.02\n",
     "            sns.lineplot(x = d.index, y=d[str(j)],\n",
     "                         label=f'P({t}|{p})',color = colors[j], linestyle = styles[i], ax=ax,\n",
-    "                         ci=None, sort=False, estimator=None)            \n",
+    "                         errorbar=None, sort=False, estimator=None)            \n",
     "    ax.legend(loc='center left', bbox_to_anchor=(0.9, 0.5)) \n",
     "     "
    ]
@@ -221,7 +235,7 @@
    "source": [
     "layout = [\n",
     "    [plot_env, plot_probs],\n",
-    "    [plot_reward]]\n",
+    "    [plot_reward, TrackIt(extractor=lambda job: job[-1].metrics['average loss'], title='loss')]]\n",
     "\n",
     "dashboard = Dashboard(['-p'], layout, figsize=(12,8))\n",
     "\n",
@@ -353,7 +367,7 @@
     "            d = df[['reward']][(df['person']==p) & (df['chosen']==j)].rolling(window=window).mean()\n",
     "            sns.lineplot(x = d.index, y=d['reward'],\n",
     "                         label=f'E(r|{p},{t})', color = colors[j], linestyle = styles[i], ax=ax,\n",
-    "                         ci=None, sort=False, estimator=None)       \n",
+    "                         errorbar=None, sort=False, estimator=None)       \n",
     "    ax.legend()"
    ]
   },
@@ -459,7 +473,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -473,11 +487,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8d1aeed6f90f1678b662623cba9451a641c249d86279ca75b8832b6f71f1bb11"
+    "hash": "a9d13462683d0a0a4577d32cb0c80597d2d736f52010de23db877ba50e997557"
    }
   }
  },
